test/sema/typeck/method/call-type-mismatch-with-type-params.dora
class Foo
impl Foo {
    fn f(a: String) {}
}
fn g[T](foo: Foo, value: T) {
    foo.f(value);
}
